<resources>
    <string name="app_name">SOSApp</string>
    <string name="sos">S.O.S</string>
    <string name="analytics">Analytics</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="message">Message:</string>
    <string name="notify">Notify Increase In SOS Calls:</string>
    <string name="count">Amount Of Calls To Notify After:</string>
    <string name="clear">CLEAR ANALYTICS</string>
</resources>